tests/logs.txt
In file included from ../map_tests/swap().cpp:2:
In file included from ../map_tests/__service.ipp:3:
In file included from ../map_tests/../../../map.hpp:5:
In file included from ../map_tests/../../../map_iterator.hpp:6:
../map_tests/../../../binary_tree.hpp:316:32: error: member reference type 'ft::Tree<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >' is not a pointer; did you mean to use '.'?
                                std::swap(this->head, other->head);
                                                      ~~~~~^~
                                                           .
../map_tests/../../../map.hpp:230:11: note: in instantiation of member function 'ft::Tree<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::swap' requested here
                                _tree.swap(other._tree);
                                      ^
../map_tests/swap().cpp:44:8: note: in instantiation of member function 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::swap' requested here
    mp.swap(mp2);
       ^
../map_tests/swap().cpp:64:59: note: in instantiation of function template specialization 'swap_test<int, int>' requested here
    exit(run_map_unit_test<int, int>("swap()", swap_test, swap_test));
                                                          ^
In file included from ../map_tests/swap().cpp:2:
In file included from ../map_tests/__service.ipp:3:
In file included from ../map_tests/../../../map.hpp:5:
In file included from ../map_tests/../../../map_iterator.hpp:6:
../map_tests/../../../binary_tree.hpp:317:21: error: no member named 'end' in 'ft::Tree<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >'
                                std::swap(this->end, other->end);
                                          ~~~~  ^
../map_tests/../../../binary_tree.hpp:318:33: error: member reference type 'ft::Tree<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >' is not a pointer; did you mean to use '.'?
                                std::swap(this->size , other->size);
                                                       ~~~~~^~
                                                            .
../map_tests/../../../binary_tree.hpp:318:21: error: reference to non-static member function must be called; did you mean to call it with no arguments?
                                std::swap(this->size , other->size);
                                          ~~~~~~^~~~
                                                    ()
../map_tests/../../../binary_tree.hpp:318:35: error: reference to non-static member function must be called; did you mean to call it with no arguments?
                                std::swap(this->size , other->size);
                                                       ~~~~~~~^~~~
                                                                  ()
../map_tests/../../../binary_tree.hpp:318:5: error: no matching function for call to 'swap'
                                std::swap(this->size , other->size);
                                ^~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/type_traits:4523:1: note: candidate function [with _Tp = unsigned long] not viable: expects an l-value for 1st argument
swap(_Tp& __x, _Tp& __y) _NOEXCEPT_(is_nothrow_move_constructible<_Tp>::value &&
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:271:1: note: candidate template ignored: could not match '_Tp [_Np]' against 'ft::Tree<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >::size_type' (aka 'unsigned long')
swap(_Tp (&__a)[_Np], _Tp (&__b)[_Np]) _NOEXCEPT_(__is_nothrow_swappable<_Tp>::value)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:633:1: note: candidate template ignored: could not match 'pair<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(pair<_T1, _T2>& __x, pair<_T1, _T2>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:2311:6: note: candidate template ignored: could not match '__compressed_pair<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
void swap(__compressed_pair<_T1, _T2>& __x, __compressed_pair<_T1, _T2>& __y)
     ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:2959:1: note: candidate template ignored: could not match 'unique_ptr<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(unique_ptr<_Tp, _Dp>& __x, unique_ptr<_Tp, _Dp>& __y) _NOEXCEPT {__x.swap(__y);}
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:4946:1: note: candidate template ignored: could not match 'shared_ptr<type-parameter-0-0>' against 'unsigned long'
swap(shared_ptr<_Tp>& __x, shared_ptr<_Tp>& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:5245:1: note: candidate template ignored: could not match 'weak_ptr<type-parameter-0-0>' against 'unsigned long'
swap(weak_ptr<_Tp>& __x, weak_ptr<_Tp>& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__functional_03:1589:1: note: candidate template ignored: could not match 'function<type-parameter-0-0>' against 'unsigned long'
swap(function<_Fp>& __x, function<_Fp>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/array:426:1: note: candidate template ignored: could not match 'array<type-parameter-0-0, _Size>' against 'unsigned long'
swap(array<_Tp, _Size>& __x, array<_Tp, _Size>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__bit_reference:87:1: note: candidate template ignored: could not match '__bit_reference<type-parameter-0-0, __has_storage_type<type-parameter-0-0>::value>' against 'unsigned long'
swap(__bit_reference<_Cp> __x, __bit_reference<_Cp> __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__bit_reference:97:1: note: candidate template ignored: could not match '__bit_reference<type-parameter-0-0, __has_storage_type<type-parameter-0-0>::value>' against 'unsigned long'
swap(__bit_reference<_Cp> __x, __bit_reference<_Dp> __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__bit_reference:107:1: note: candidate template ignored: could not match '__bit_reference<type-parameter-0-0, __has_storage_type<type-parameter-0-0>::value>' against 'unsigned long'
swap(__bit_reference<_Cp> __x, bool& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__bit_reference:117:1: note: candidate template ignored: could not match '__bit_reference<type-parameter-0-0, __has_storage_type<type-parameter-0-0>::value>' against 'unsigned long'
swap(bool& __x, __bit_reference<_Cp> __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__split_buffer:627:1: note: candidate template ignored: could not match '__split_buffer<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(__split_buffer<_Tp, _Allocator>& __x, __split_buffer<_Tp, _Allocator>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:3410:1: note: candidate template ignored: could not match 'vector<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(vector<_Tp, _Allocator>& __x, vector<_Tp, _Allocator>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__tree:2868:1: note: candidate template ignored: could not match '__tree<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
swap(__tree<_Tp, _Compare, _Allocator>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/map:594:1: note: candidate template ignored: could not match '__map_value_compare<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2, >' against 'unsigned long'
swap(__map_value_compare<_Key, _CP, _Compare, __b>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/map:1613:1: note: candidate template ignored: could not match 'map<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2, type-parameter-0-3>' against 'unsigned long'
swap(map<_Key, _Tp, _Compare, _Allocator>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/map:2158:1: note: candidate template ignored: could not match 'multimap<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2, type-parameter-0-3>' against 'unsigned long'
swap(multimap<_Key, _Tp, _Compare, _Allocator>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/set:914:1: note: candidate template ignored: could not match 'set<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
swap(set<_Key, _Compare, _Allocator>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/set:1401:1: note: candidate template ignored: could not match 'multiset<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
swap(multiset<_Key, _Compare, _Allocator>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/deque:2930:1: note: candidate template ignored: could not match 'deque<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(deque<_Tp, _Allocator>& __x, deque<_Tp, _Allocator>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/stack:308:1: note: candidate template ignored: could not match 'stack<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(stack<_Tp, _Container>& __x, stack<_Tp, _Container>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:4161:1: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
swap(basic_string<_CharT, _Traits, _Allocator>& __lhs,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__mutex_base:277:1: note: candidate template ignored: could not match 'unique_lock<type-parameter-0-0>' against 'unsigned long'
swap(unique_lock<_Mutex>& __x, unique_lock<_Mutex>& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/fstream:493:1: note: candidate template ignored: could not match 'basic_filebuf<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(basic_filebuf<_CharT, _Traits>& __x, basic_filebuf<_CharT, _Traits>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/fstream:1271:1: note: candidate template ignored: could not match 'basic_ifstream<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(basic_ifstream<_CharT, _Traits>& __x, basic_ifstream<_CharT, _Traits>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/fstream:1484:1: note: candidate template ignored: could not match 'basic_ofstream<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(basic_ofstream<_CharT, _Traits>& __x, basic_ofstream<_CharT, _Traits>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/fstream:1697:1: note: candidate template ignored: could not match 'basic_fstream<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
swap(basic_fstream<_CharT, _Traits>& __x, basic_fstream<_CharT, _Traits>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/sstream:431:1: note: candidate template ignored: could not match 'basic_stringbuf<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
swap(basic_stringbuf<_CharT, _Traits, _Allocator>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/sstream:718:1: note: candidate template ignored: could not match 'basic_istringstream<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
swap(basic_istringstream<_CharT, _Traits, _Allocator>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/sstream:836:1: note: candidate template ignored: could not match 'basic_ostringstream<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
swap(basic_ostringstream<_CharT, _Traits, _Allocator>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/sstream:955:1: note: candidate template ignored: could not match 'basic_stringstream<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
swap(basic_stringstream<_CharT, _Traits, _Allocator>& __x,
^
In file included from ../map_tests/swap().cpp:2:
In file included from ../map_tests/__service.ipp:3:
In file included from ../map_tests/../../../map.hpp:5:
In file included from ../map_tests/../../../map_iterator.hpp:6:
../map_tests/../../../binary_tree.hpp:319:34: error: member reference type 'ft::Tree<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >' is not a pointer; did you mean to use '.'?
                                std::swap(this->_alloc, other->_alloc);
                                                        ~~~~~^~
                                                             .
../map_tests/../../../binary_tree.hpp:320:33: error: member reference type 'ft::Tree<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >' is not a pointer; did you mean to use '.'?
                                std::swap(this->_comp, other->_comp);
                                                       ~~~~~^~
                                                            .
8 errors generated.
